--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Be House - Estética e Massagens!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Imagens/logo-behouse-circle.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
                 <ul class="nav-list">
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Contato</a></li>
-                    <li><a href="#">Agendar</a></li>
+                    <li><a href="https://wa.me/5521984263040?text=Oi%2C%20Be%20House%21%20Desejo%20fazer%20um%20agendamento%21" target="_blank">Agendar</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,7 +26,7 @@
                 <div class="hero-center">
                     <h1>5 anos de serviços e excelência</h1>
                     <p>A arte de ser moderna e confortavel</p>
-                    <a href="#" class="link-button">Agendar Agora</a>
+                    <a href="https://wa.me/5521984263040?text=Oi%2C%20Be%20House%21%20Desejo%20fazer%20um%20agendamento%21" class="link-button" target="_blank">Agendar Agora</a>
                 </div>
             </div>
         </section>
@@ -50,9 +51,31 @@
                     <img src="Imagens/foto4-behouse.jpg" alt="">
                     <img src="Imagens/foto5-behouse.jpg" alt="">
                 </div>
-                <a href="#" class="link-button">Agendar Agora</a>
+                <a href="https://wa.me/5521984263040?text=Oi%2C%20Be%20House%21%20Desejo%20fazer%20um%20agendamento%21" class="link-button" target="_blank">Agendar Agora</a>
+            </div>
+        </section>
+        <section class="section-3">
+            <div class="section-3-center">
+                <div class="section-3-col">
+                    <p class="section-3-email">behouseestetica@gmail.com</p>
+                    <a href="https://wa.me/5521984263040?text=Oi%2C%20Be%20House%21%20Desejo%20fazer%20um%20agendamento%21" class="section-3-tel" target="_blank">(21) 98426-3040</a>
+                    <div class="social-buttons">
+                        <a href="https://www.facebook.com/behouseestetica/"  target="_blank"><img src="Imagens/logo-facebook.jpg" alt="" class="social-img"></a>
+                        <a href="#"  target="_blank"><img src="Imagens/logo-instagram.jpg" alt="" class="social-img"></a>
+                        <a href="https://github.com/alvesmachado"  target="_blank"><img src="Imagens/logo-github.jpg" alt="" class="social-img"></a>
+                    </div>
+                </div>
+                <hr>
+                <div class="section-3-col">
+                    <img src="Imagens/logo-behouse.jpg" alt="" class="section-3-logo">
+                </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-center">
+            <p>Copyright © 2025 <a href="https://github.com/alvesmachado" target="_blank">Michael Douglas</a></p>
+        </div>
+    </footer>
 </body>
 </html>
