--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stylesheets/all.css" media="all">
     <link rel="stylesheet" href="stylesheets/media.css">
 </head>
-<body>
+<body onresize="mudouTam()">
     <header>
         <i class="material-symbols-outlined menu-button" onclick="clickMenu()">menu</i>
         <div class="header-right">
@@ -23,6 +23,42 @@
             </div>
         </div>
     </header>
+    <nav class="list-menu-nav">
+        <div>
+            <ul class="list-menu">
+                <li>
+                    <a href="#" class="menu-m-op">
+                        <i class="material-symbols-outlined">home</i>
+                        <p>Inicial</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="material-symbols-outlined">work</i>
+                        <p>Serviços</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="material-symbols-outlined">groups</i>
+                        <p>Sobre nós</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="material-symbols-outlined">call</i>
+                        <p>Contatos</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="material-symbols-outlined">calendar_today</i>
+                        <p>Agendar</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <nav id="menu_itens">
         <div class="menu_m" id="f_menu_m">
             <div class="header-top-menu">
@@ -134,6 +170,11 @@
         </div>
     </footer>
     <script>
+        function mudouTam() {
+            if (window.innerWidth >= 992) {
+                menu_itens.style.display = 'none'
+            }
+        }
         function clickMenu() {
             if (menu_itens.style.display == 'block') {
                 menu_itens.style.display = 'none'
